# feldman-cousins

./: .pre-commit-config.yaml  LICENSE  README.md  environment.yml  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.md
src/feldman_cousins/: __init__.py
tests/: test_package.py
